fix(breadcrumb): align ui with periscope

--- a/frontend/src/components/AlertBreadcrumb/AlertBreadcrumb.module.scss
+++ b/frontend/src/components/AlertBreadcrumb/AlertBreadcrumb.module.scss
@@ -7,7 +7,6 @@
 
 	:global(.ant-breadcrumb-separator) {
 		color: var(--muted-foreground);
-		font-family: 'Geist Mono';
 	}
 }
 
